# Deposito-Bruno

./: .gitignore  README.md
02-09/: qdrant.py
18-08/es1/: input.txt  main.py
19-08/es1/dataset/: loading_set.py
19-08/es1/training/: train.py  trainAir.py
20-08/es1/: train.py
20-08/es1/dataset/: load_set.py
20-08/es2/: script.py
20-08/es2/dataset/: load.py
22-08/: counter.py
22-08/es1/: script.py
22-08/teoria/: 05 - LLM via API.ipynb
26-08/es1/: researh.py
27-08/guide_creator_flow/: .gitignore
27-08/guide_creator_flow/src/guide_creator_flow/: main.py
27agosto/prova/: README.md  pyproject.toml
27agosto/prova/src/prova/: main.py
27agosto/prova/src/prova/crews/content_crew/: content_crew.py
27agosto/prova/src/prova/crews/rag_crew/: rag_crew.py
27agosto/prova/src/prova/crews/rag_crew/config/: agents.yaml  tasks.yaml
27agosto/prova/src/prova/crews/sum_crew/: sum_crew.py
27agosto/prova/src/prova/crews/sum_crew/config/: agents.yaml  tasks.yaml
27agosto/prova/src/prova/tools/: custom_tool.py
28-08/rag_flow/: README.md  conf.py  index.rst  mkdocs.yml  pyproject.toml
28-08/rag_flow/_build/: genindex.html  index.html  py-modindex.html
28-08/rag_flow/_build/_modules/rag_flow/tools/: custom_tool.html  (+1 more)
28-08/rag_flow/_build/html/: genindex.html  py-modindex.html  search.html
28-08/rag_flow/site/: 404.html  index.html  search.html
28-08/rag_flow/site/search/: search_index.json
28-08/rag_flow/src/rag_flow/: __init__.py  main.py
28-08/rag_flow/src/rag_flow/tools/: Rag.py  __init__.py  custom_tool.py  rag_tool.py
workflows/: ci.yml
(+12 files in other folders)
